nf-core cutadapt, fastqc, bwa, markdup

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,6 +22,11 @@ process {
         ext.args = '--quiet'
     }
 
+	// https://cutadapt.readthedocs.io/en/v1.17/guide.html
+    withName: CUTADAPT {
+		ext.args = '-q 30 -a AGATCGGAAGAGCACACGTCTGAACTCCAGTCAC -A AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATT'
+	}
+
     withName: 'MULTIQC' {
         ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
