--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,7 @@
 // Global default params, used in configs
 params {
 
+
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
@@ -53,6 +54,20 @@ params {
     validationSchemaIgnoreParams     = 'genomes,igenomes_base'
     validationShowHiddenParams       = false
     validate_params                  = true
+	
+	
+	
+	step       = 'mapping'
+	aligner    = "bwa-mem"
+	fasta      = "/ess/dlstibm/Database/9606.Homo_Sapiens/GRCh38/Custom/sarek.GATK.GRCh38.aws/Homo_sapiens/GATK/GRCh38/Sequence/WholeGenomeFasta/Homo_sapiens_assembly38.fasta"
+	fasta_fai  = "/ess/dlstibm/Database/9606.Homo_Sapiens/GRCh38/Custom/sarek.GATK.GRCh38.aws/Homo_sapiens/GATK/GRCh38/Sequence/WholeGenomeFasta/Homo_sapiens_assembly38.fasta.fai"
+	dict       = "/ess/dlstibm/Database/9606.Homo_Sapiens/GRCh38/Custom/sarek.GATK.GRCh38.aws/Homo_sapiens/GATK/GRCh38/Sequence/WholeGenomeFasta/Homo_sapiens_assembly38.dict"
+	bwa        = "/ess/dlstibm/Database/9606.Homo_Sapiens/GRCh38/Custom/sarek.GATK.GRCh38.aws/Homo_sapiens/GATK/GRCh38/Sequence/BWAIndex"
+
+	save_output_as_bam  = null
+	save_mapped         = null
+	skip_tools          = null
+	tools               = null
 
 }
 
@@ -236,6 +251,10 @@ manifest {
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
+includeConfig 'conf/modules/trimming.config'
+includeConfig 'conf/modules/aligner.config'
+includeConfig 'conf/modules/markduplicates.config'
+
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
